staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedit-staging
  namespace: wedit-staging
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: wedit-staging
  template:
    metadata:
      labels:
        app: wedit-staging
    spec:
      containers:
        - name: wedit
          image: wien0128/wedit-be:05c8d2c
          ports:
            - containerPort: 8080
