staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wedit-staging-ingress
  namespace: wedit-staging
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: stg-api.wedit.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wedit-staging-service
                port:
                  number: 80
